<resources>
    <string name="app_name">Meu Portifólio</string>
    <string name="myapps_title">Meus Aplicativos Nanodegree</string>
    <string name="filmes">Filmes populares</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="maior">Faça-o maior</string>
    <string name="material">Faça seu aplicativo com Material</string>
    <string name="onipresente">Seja onipresente</string>
    <string name="capstone">Capstone</string>
</resources>
